--- a/11a_Consola/index.html
+++ b/11a_Consola/index.html
@@ -23,6 +23,7 @@
 		<h1>Sercicio $log</h1>
 	</header>
 	<article>
+		<p>Fecha de alta : {{oUsuario.fechaAlta |date:'fullDate'}}
 		<p>Comprueba en la consola de JS el resultado de la aplicación<br>
 		Podrás conocer al famoso scope personalmente</p>
 	</article>
