--- a/11b_Lista_Tareas_Storage/index.html
+++ b/11b_Lista_Tareas_Storage/index.html
@@ -27,6 +27,7 @@
 	<script src="../node_modules/jquery-ui-dist/jquery-ui.min.js"></script>
 	<script src="../node_modules/angular-local-storage/dist/angular-local-storage.min.js"></script>
 	<script src="js/app.js"></script>
+	<script src="js/appController.js"></script>
 </head>
 	
 <body ng-app="appModule"  ng-controller= "AppController">
