--- a/04_Expresiones/index.html
+++ b/04_Expresiones/index.html
@@ -13,8 +13,8 @@
 	<title>Ejemplos de Expresiones</title>
 	<link rel="stylesheet" href="css/default.css">
 	<link rel="icon" href="fav_icon.png">
-	<script type="text/javascript" src="../node_modules/angular/angular.min.js"></script>
-	<script src="./app.js"></script>
+	<script src="../node_modules/angular/angular.min.js"></script>
+	<script src="./js/app.js"></script>
 </head>
 
 <body ng-app="app" ng-controller="AppMain as $ctrl">
@@ -41,7 +41,7 @@
 		Resultado de la expresión: {<code>{1==1 ? "Red" : "Blue"}</code>}</p>	
 	</article>
 	<footer>
-		<p>Alejandro L. Cerezo - Madrid 2015</p>
+		<p>Alejandro L. Cerezo - Madrid 2017</p>
 	</footer>
 	
 </body>
