--- a/11a_Consola.class/index.html
+++ b/11a_Consola.class/index.html
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" href="css/default.css">
 	<link rel="icon" href="fav_icon.png">
 	<script src="../node_modules/angular/angular.min.js"></script>
-	<script src="./../node_modules/angular-locale_es-es.js"></script>
+	<script src="../node_modules/angular-i18n/angular-locale_es-es.js"></script>
 	<script src="js/appModule.js"></script>
 </head>
 
