--- a/03a_Acumulador_1/index.html
+++ b/03a_Acumulador_1/index.html
@@ -14,8 +14,8 @@
 	<title>Acumulador</title>
 	<link rel="stylesheet" href="css/default.css">
 	<link rel="icon" href="fav_icon.png">
-	<script  src="../node_modules/angular/angular.min.js"></script>
-	<script src ="./app.js"></script>
+	<script src="../node_modules/angular/angular.min.js"></script>
+	<script src ="./js/app.js"></script>
 </head>
 
 <body ng-app="acumulador" ng-controller="AcumuladorCtrl">
@@ -40,7 +40,7 @@
 
 	</article>
 	<footer>
-		<p>Alejandro L. Cerezo - Madrid 2015</p>
+		<p>Alejandro L. Cerezo - Madrid 2017</p>
 	</footer>
 </body>
 </html>
