--- a/03b_Acumulador_2/index.html
+++ b/03b_Acumulador_2/index.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" href="css/default.css">
 	<link rel="icon" href="fav_icon.png">
 	<script  src="../node_modules/angular/angular.min.js"></script>
-	<script src ="./app.js"></script>
+	<script src ="./js/app.js"></script>
 </head>
 <body ng-app="acumulador" ng-controller="AcumuladorCtrl as vm">
 	<header>
@@ -39,7 +39,7 @@
 
 	</article>
 	<footer>
-		<p>Alejandro L. Cerezo - Madrid 2015</p>
+		<p>Alejandro L. Cerezo - Madrid 2017</p>
 	</footer>
 </body>
 </html>
