--- a/04_Pensamientos_OK/index.html
+++ b/04_Pensamientos_OK/index.html
@@ -13,7 +13,7 @@
 	<title>Pensamientos</title>
 	<link rel="stylesheet" href="css/default.css">
 	<link rel="icon" href="fav_icon.png">
-	<script type="text/javascript" src="../node_modules/angular/angular.min.js"></script>
+	<script src="../node_modules/angular/angular.min.js"></script>
 	<script src="./js/app.js"></script>
 </head>
 
@@ -40,7 +40,7 @@
 		</ul>			
 	</article>
 	<footer>
-		<p>Alejandro L. Cerezo - Madrid 2015</p>
+		<p>Alejandro L. Cerezo - Madrid 2017</p>
 	</footer>
 	
 </body>
