--- a/05b_Muestrario_2/index.html
+++ b/05b_Muestrario_2/index.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" href="css/colores.css">
 	<link rel="icon" href="fav_icon.png">
 	<script src="../node_modules/angular/angular.js"></script>
-	<script src="../node_modules/angular-1.6.4/i18n/angular-locale_es-es.js"></script>
+	<script src="../node_modules/angular-i18n/angular-locale_es-es.js"></script>
 	<script src="js/appModule.js"></script>
 </head>
 
@@ -51,6 +51,6 @@
 			<div class="colores" id="olive" ng-show="isHidden">Verde oliva</div>
 		</div>
 	</article>
-	<footer ng-include="'./_footer.html'"></footer>
+	<footer ng-include="'../common/_footer.html'"></footer>
 </body>
 </html>
