--- a/06_Lista_autores/index.html
+++ b/06_Lista_autores/index.html
@@ -17,8 +17,8 @@
 	<title>Lista de Autores</title>
 	<link rel="stylesheet" href="css/default.css">
 	<link rel="icon" href="fav_icon.png">
-	<script type="text/javascript" src="../node_modules/angular/angular.min.js"></script>
-	<script type="text/javascript" src="js/appModule.js"></script>
+	<script src="../node_modules/angular/angular.min.js"></script>
+	<script src="js/appModule.js"></script>
 </head>
 
 <body ng-app = "appModule" ng-controller= "AppController">
