--- a/13c_Directiva_Link/index.html
+++ b/13c_Directiva_Link/index.html
@@ -18,7 +18,8 @@
 
     <ng-include src="'partials/cabeza.html'"></ng-include>     
 
-    <bloque2></bloque2>         
+	<!--Ejemplo de directiva que no existe-->
+	<bloque2></bloque2>         
 
     <add-texto alt="texto alternanivo"></add-texto>
 
