--- a/17c_Menu_Lista_Tareas_HTML5/index.html
+++ b/17c_Menu_Lista_Tareas_HTML5/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <!-- base -->
-    <base href="http://localhost:8080/Angular/angularjs_2017/17c_Menu_Lista_Tareas_HTML5/" target="_parent">
+    <base href="/17c_Menu_Lista_Tareas_HTML5/" target="_parent">
     <title>Menu en modo HTML5</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
