--- a/17e_Componentes_Menu/app_components/main/app.main.templ.html
+++ b/17e_Componentes_Menu/app_components/main/app.main.templ.html
@@ -1,6 +1,8 @@
 <app-cabeza></app-cabeza> 
 <app-menu></app-menu>
 
+<!--Aqui cargaría el componente definido 
+    en la opcion de menu seleccionada-->
 <ng-view></ng-view>
 
 <app-pie></app-pie>
