--- a/17e_Componentes_Menu/index.1.html
+++ b/17e_Componentes_Menu/index.1.html
@@ -6,7 +6,7 @@
 	<!-- 
 		Base: http://desarrollo.cyborg8.loc/Angular_Bootstrap/Angular_Routing_Rest/02b_Menu_Lista_Tareas_HTML5/
 	-->
-	<base href="/Angular/Angularjs_2017/17e_Componentes_Menu/" target="_parent">
+	<base href="/17e_Componentes_Menu/" target="_parent">
 	
 	<meta name="description" content="Ejercicios de AngularJS">
 	<meta name="author" content="Alejandro Cerezo">  	
@@ -17,13 +17,7 @@
 	<link rel="stylesheet" href="css/default.css">
 	<script src="../node_modules/angular/angular.min.js"></script>	
 	<script src="../node_modules/angular-route/angular-route.js"></script>
-
-</head>
-
-<body ng-app="appMenuComponentes">
-
-	<app-main></app-main>
-    <script src="app_modules/app.module.js"></script>
+	<script src="app_modules/app.module.js"></script>
 	<script src="app_components/main/app.main.component.js"></script>
 	<script src="app_components/cabeza/app.cabeza.component.js"></script>
 	<script src="app_components/pie/app.pie.component.js"></script>
@@ -32,6 +26,11 @@
 	<script src="app_pages/html/app.html.component.js"></script>
 	<script src="app_pages/css/app.css.component.js"></script>
 	<script src="app_pages/js/app.js.component.js"></script>
+	<script src="app.services/services.js"></script>
+</head>
+
+<body ng-app="appMenuComponentes">
+	<app-main></app-main>   
 </body>
 </html>
 
