--- a/17a.Menu_Sin_Router/index.1.html
+++ b/17a.Menu_Sin_Router/index.1.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!--Ejemplo de un menú sin utilizar 
+	los elementos propios del enrutamiento de Aggular-->
 <html>
 <head>
 	<title>Estructuras con menú</title>
@@ -9,8 +11,7 @@
 	<link rel="shortcut icon" href="fav_icon.png">
   	<link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">		
   	<link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap-theme.min.css">
-	<script type="text/javascript" src="../node_modules/angular/angular.min.js"></script>	
-
+	<script type="text/javascript" src="../node_modules/angular/angular.min.js"></script>
 </head>
 
 <body ng-app="appPrueba" ng-controller="MainController as $ctrl">
@@ -23,8 +24,6 @@
     <ng-include ng-if="$ctrl.aOpciones[2].esActivo" src="'partials/cuerpo2.html'"></ng-include>     
 
     <ng-include src="'partials/pie.html'"></ng-include>        
-
-
     <script src="js/app.js"></script>
 </body>
 </html>
