--- a/18b_Paises/index.html
+++ b/18b_Paises/index.html
@@ -21,7 +21,7 @@
 	</header>
 	<form>
 		<label>Selecciona un continente:</label>
-			<select ng-model="url" ng-change="buscarPaises()">
+			<select ng-model="url" ng-change="cambios()">
 				<option value="http://restcountries.eu/rest/v1/region/africa">Africa</option>
 				<option value="http://restcountries.eu/rest/v1/region/europe">Europa</option>
 				<option value="http://restcountries.eu/rest/v1/region/americas">America</option>
